[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hagglz-agent"
version = "1.0.0"
description = "AI-powered bill negotiation agent built with LangGraph Platform"
authors = [
    {name = "Platform45", email = "hi@platform45.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "langgraph",
    "langchain",
    "langchain-openai",
    "langsmith",
    "pydantic"
]

[project.urls]
Homepage = "https://github.com/shaunrich/hagglz-agent"
Repository = "https://github.com/shaunrich/hagglz-agent"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "scripts*"]